tests/enum_from/compile_fail/container/derive_on_struct.stderr
error: EnumFrom can only be derived for enums
 --> tests/enum_from/compile_fail/container/derive_on_struct.rs:7:10
  |
7 | #[derive(EnumFrom)] // Should only work on enums
  |          ^^^^^^^^
  |
  = note: this error originates in the derive macro `EnumFrom` (in Nightly builds, run with -Z macro-backtrace for more info)
